Dockerイメージ構成

--- a/wildfly/slave/Dockerfile
+++ b/wildfly/slave/Dockerfile
@@ -6,11 +6,11 @@ RUN apt-get -y install curl unzip
 RUN apt-get -y install openjdk-8-jdk
 RUN apt-get -y autoremove
 RUN apt-get -y autoclean
-COPY wildfly-9.0.2.Final.zip /
+ADD wildfly-9.0.2.Final.zip /
 RUN unzip -o -d /opt wildfly-9.0.2.Final.zip
 RUN rm -f /wildfly-9.0.2.Final.zip
-COPY h2-1.4.190.jar /
+ADD h2-1.4.190.jar /
 RUN /opt/wildfly-9.0.2.Final/bin/jboss-cli.sh --command="module add --name=my.h2 --resources=/h2-1.4.190.jar --dependencies=javax.api,javax.transaction.api"
 RUN rm -f /h2-1.4.190.jar
-COPY host-slave.xml /opt/wildfly-9.0.2.Final/domain/configuration/host.xml
+ADD host-slave.xml /opt/wildfly-9.0.2.Final/domain/configuration/host.xml
 CMD /opt/wildfly-9.0.2.Final/bin/domain.sh -b 0.0.0.0 -bmanagement 0.0.0.0 -Djboss.domain.master.address=172.17.0.1
