--- a/jboss-eap/slave/Dockerfile
+++ b/jboss-eap/slave/Dockerfile
@@ -13,4 +13,7 @@ ADD h2-1.4.190.jar /
 RUN /opt/jboss-eap-6.4/bin/jboss-cli.sh --command="module add --name=my.h2 --resources=/h2-1.4.190.jar --dependencies=javax.api,javax.transaction.api"
 RUN rm -f /h2-1.4.190.jar
 ADD host-slave.xml /opt/jboss-eap-6.4/domain/configuration/host.xml
-CMD /opt/jboss-eap-6.4/bin/domain.sh -b 0.0.0.0 -bmanagement 0.0.0.0 -Djboss.domain.master.address=172.17.0.1
+
+EXPOSE 8009
+EXPOSE 8080
+CMD /opt/jboss-eap-6.4/bin/domain.sh -b 0.0.0.0 -bmanagement 0.0.0.0 -Djboss.domain.master.address=${MASTER_PORT_9999_TCP_ADDR}
