Dockerイメージ構成

--- a/apache2+mod_cluster/mod_cluster.conf
+++ b/apache2+mod_cluster/mod_cluster.conf
@@ -1,29 +1,12 @@
-<IfModule manager_module>
-
-	Listen *:6666
-	MemManagerFile /var/log/apache2/
-
-	<VirtualHost *:6666>
-
-		<Location />
-			Order deny,allow
-			Deny from all
-			Allow from all
-		</Location>
- 
-		KeepAliveTimeout 60
-		MaxKeepAliveRequests 0
- 
-		ManagerBalancerName mycluster
-		ServerAdvertise On
-		EnableMCPMReceive
-
-		<Location /mod_cluster_manager>
-			SetHandler mod_cluster-manager
-			Order deny,allow
-			Deny from all
-			Allow from all
-		</Location>
-
-	</VirtualHost>
-</IfModule>
+MemManagerFile /var/cache/apache2/mod_cluster/
+<VirtualHost *:80>
+	<Location />
+		Order deny,allow
+		Allow from all
+	</Location>
+	KeepAliveTimeout 60
+	MaxKeepAliveRequests 0
+	ServerAdvertise On
+	EnableMCPMReceive
+	ManagerBalancerName mycluster
+</VirtualHost>
