Dockerイメージ構成

--- a/apache2+mod_cluster/mod_cluster.conf
+++ b/apache2+mod_cluster/mod_cluster.conf
@@ -1,8 +1,7 @@
 MemManagerFile /var/cache/apache2/mod_cluster/
 <VirtualHost *:80>
 	<Location />
-		Order deny,allow
-		Allow from all
+		Require all granted
 	</Location>
 	KeepAliveTimeout 60
 	MaxKeepAliveRequests 0
