--- a/apache2+mod_cluster/Dockerfile
+++ b/apache2+mod_cluster/Dockerfile
@@ -30,5 +30,4 @@ ADD mod_cluster-manager.conf /etc/apache2/sites-available/
 RUN a2enmod mod_cluster
 RUN a2ensite mod_cluster-manager
 
-#CMD service apache2 start
-#CMD /bin/bash
+CMD service apache2 start && bash
