--- a/apache2+mod_cluster/mod_cluster-manager.conf
+++ b/apache2+mod_cluster/mod_cluster-manager.conf
@@ -1,7 +1,6 @@
-<VirtualHost *:80> 
+<VirtualHost *:80>
 	<Location /mod_cluster-manager>
 		SetHandler mod_cluster-manager
-		Order deny,allow
-		Allow from all
+		Require all granted
 	</Location>
 </VirtualHost>
