Dockerイメージ構成

--- a/apache2+mod_cluster/mod_cluster.conf
+++ b/apache2+mod_cluster/mod_cluster.conf
@@ -8,4 +8,8 @@ MemManagerFile /var/cache/apache2/mod_cluster/
 	ServerAdvertise On
 	EnableMCPMReceive
 	ManagerBalancerName mycluster
+	<Location /mod_cluster-manager>
+		SetHandler mod_cluster-manager
+		Require all granted
+	</Location>
 </VirtualHost>
