--- a/centos8+devmailsv/Dockerfile
+++ b/centos8+devmailsv/Dockerfile
@@ -21,31 +21,43 @@ RUN \
         -newkey rsa:${CERT_KEYLEN} -days ${CERT_DAYS} \
 # [Postfix設定]
 # (1) /etc/postfix/main.cf
-    && sed -i_DIST -e 's/^\(inet_interfaces = \)/## \1/' /etc/postfix/main.cf \
-    && sed -i-e 's/^\(smtpd_tls_cert_file = \)/## \1/' /etc/postfix/main.cf \
-    && sed -i-e 's/^\(smtpd_tls_key_file = \)/## \1/' /etc/postfix/main.cf \
+    && sed -i_DIST \
+        -e 's/^\(inet_interfaces = \)/## \1/' \
+        -e 's/^\(smtpd_tls_cert_file = \)/## \1/' \
+        -e 's/^\(smtpd_tls_key_file = \)/## \1/' \
+        /etc/postfix/main.cf \
     && echo >> /etc/postfix/main.cf \
     && echo "########################################" >> /etc/postfix/main.cf \
     && echo "# DEV MAIL SERVER CONFIGURATION" >> /etc/postfix/main.cf \
-    && echo "# (0) BASE" \
+    && echo "# (0) BASE" >> /etc/postfix/main.cf \
     && echo "inet_interfaces = all" >> /etc/postfix/main.cf \
     && echo "home_mailbox = Maildir/" >> /etc/postfix/main.cf \
-    && echo "# (1) NEVER DELIVER" >> /etc/postfix/main.cf \
+    && echo "# (1) RELAY CONTROL" >> /etc/postfix/main.cf \
+    && echo "mynetworks = 0.0.0.0/0" >> /etc/postfix/main.cf \
+    && echo "# (2) NEVER DELIVER" >> /etc/postfix/main.cf \
     && echo "disable_dns_lookups = yes" >> /etc/postfix/main.cf \
     && echo "transport_maps = hash:/etc/postfix/transport" >> /etc/postfix/main.cf \
-    && echo "# (2) ENABLE TLS" >> /etc/postfix/main.cf \
+    && echo "# (3) ENABLE TLS" >> /etc/postfix/main.cf \
     && echo "smtpd_use_tls = yes" >> /etc/postfix/main.cf \
     && echo "smtpd_tls_cert_file = /etc/pki/tls/certs/${CERT_NAME}.pem" >> /etc/postfix/main.cf \
     && echo "smtpd_tls_key_file = /etc/pki/tls/private/${CERT_NAME}.pem" >> /etc/postfix/main.cf \
-    && echo "# (3) ENABLE SMTP AUTH" >> /etc/postfix/main.cf \
+    && echo "# (4) ENABLE SMTP AUTH" >> /etc/postfix/main.cf \
     && echo "smtpd_sasl_auth_enable = yes" >> /etc/postfix/main.cf \
     && echo "smtpd_sasl_type = dovecot" >> /etc/postfix/main.cf \
     && echo "smtpd_sasl_path = private/auth" >> /etc/postfix/main.cf \
 # (2) /etc/postfix/transport
     && echo -e "*\tlocal:" >> /etc/postfix/transport \
     && postmap /etc/postfix/transport \
+# (3) /etc/postfix/master.cf
+    && sed -i_DIST \
+        -e 's/^#\(submission \)/\1/' \
+        -e 's/^#\(  -o syslog_name=postfix\/submission\)/\1/' \
+        -e 's/^#\(smtps \)/\1/' \
+        -e 's/^#\(  -o syslog_name=postfix\/smtps\)/\1/' \
+        -e 's/^#\(  -o smtpd_tls_wrappermode=yes\)/\1/' \
+        /etc/postfix/master.cf \
 # [Dovecot設定]
-# (3) /etc/dovecot/conf.d/11-devmailsv.conf
+# (4) /etc/dovecot/conf.d/11-devmailsv.conf
     && echo "########################################" >> /etc/dovecot/conf.d/11-devmailsv.conf \
     && echo "# DEV MAIL SERVER CONFIGURATION" >> /etc/dovecot/conf.d/11-devmailsv.conf \
     && echo "# (1) /etc/dovecot/conf.d/10-mail.conf" >> /etc/dovecot/conf.d/11-devmailsv.conf \
@@ -64,10 +76,7 @@ RUN \
 
 COPY *.sh /root/
 
-EXPOSE 22
-EXPOSE 25 587 465
-EXPOSE 110 995
-EXPOSE 143 993
+EXPOSE 22 25 465 587 993 995
 
 ENV TZ=Asia/Tokyo
 CMD ["/sbin/init", "-D"]
