--- a/centos8+devmailsv/Dockerfile
+++ b/centos8+devmailsv/Dockerfile
@@ -22,25 +22,11 @@ RUN dnf install -y rsyslog openssh-server postfix dovecot mailx passwd \
     && systemctl enable postfix.service \
     && systemctl enable dovecot.service
 
-ARG CERT_NAME=devmailsv
-ARG CERT_CN=devmailsv
-ARG CERT_OU=devmailsv
-ARG CERT_KEYLEN=2048
-ARG CERT_DAYS=3650
-
 RUN \
-# [共用TLS鍵対生成]
-    openssl req -x509 -outform PEM -keyform PEM \
-        -out /etc/pki/tls/certs/${CERT_NAME}.pem \
-        -keyout /etc/pki/tls/private/${CERT_NAME}.pem \
-        -subj "/OU=${CERT_OU}/CN=${CERT_CN}" -nodes \
-        -newkey rsa:${CERT_KEYLEN} -days ${CERT_DAYS} \
 # [Postfix設定]
 # (1) /etc/postfix/main.cf
-    && sed -i_DIST \
+    sed -i_DIST \
         -e 's/^\(inet_interfaces = \)/## \1/' \
-        -e 's/^\(smtpd_tls_cert_file = \)/## \1/' \
-        -e 's/^\(smtpd_tls_key_file = \)/## \1/' \
         /etc/postfix/main.cf \
     && echo >> /etc/postfix/main.cf \
     && echo "########################################" >> /etc/postfix/main.cf \
@@ -55,8 +41,6 @@ RUN \
     && echo "transport_maps = hash:/etc/postfix/transport" >> /etc/postfix/main.cf \
     && echo "# (3) ENABLE TLS" >> /etc/postfix/main.cf \
     && echo "smtpd_use_tls = yes" >> /etc/postfix/main.cf \
-    && echo "smtpd_tls_cert_file = /etc/pki/tls/certs/${CERT_NAME}.pem" >> /etc/postfix/main.cf \
-    && echo "smtpd_tls_key_file = /etc/pki/tls/private/${CERT_NAME}.pem" >> /etc/postfix/main.cf \
     && echo "# (4) ENABLE SMTP AUTH" >> /etc/postfix/main.cf \
     && echo "smtpd_sasl_auth_enable = yes" >> /etc/postfix/main.cf \
     && echo "smtpd_sasl_type = dovecot" >> /etc/postfix/main.cf \
@@ -85,14 +69,10 @@ RUN \
     && echo "    user = postfix" >> /etc/dovecot/conf.d/11-devmailsv.conf \
     && echo "    group = postfix" >> /etc/dovecot/conf.d/11-devmailsv.conf \
     && echo "  }" >> /etc/dovecot/conf.d/11-devmailsv.conf \
-    && echo "}" >> /etc/dovecot/conf.d/11-devmailsv.conf \
-    && echo "# (3) /etc/dovecot/conf.d/10-ssl.conf" >> /etc/dovecot/conf.d/11-devmailsv.conf \
-    && echo "ssl_cert = </etc/pki/tls/certs/${CERT_NAME}.pem" >> /etc/dovecot/conf.d/11-devmailsv.conf \
-    && echo "ssl_key = </etc/pki/tls/private/${CERT_NAME}.pem" >> /etc/dovecot/conf.d/11-devmailsv.conf
+    && echo "}" >> /etc/dovecot/conf.d/11-devmailsv.conf
 
 COPY *.sh /root/
 
 EXPOSE 22 25 465 587 993 995
 
-ENV TZ=Asia/Tokyo
 CMD ["/sbin/init", "-D"]
